@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-20T08:13:30Z",
+  "timestamp" : "2022-07-21T16:12:21Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 443,
-  "uniques" : 38,
+  "count" : 444,
+  "uniques" : 39,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
